--- a/SIH Frontend/index.html
+++ b/SIH Frontend/index.html
@@ -784,74 +784,69 @@
         let interval = setInterval(()=>{ index=(index+1)%total; updateCarousel(); }, 3000);
         function resetInterval(){ clearInterval(interval); interval=setInterval(()=>{index=(index+1)%total; updateCarousel();},3000);}
         updateCarousel();
-          // Itinerary generator (calls backend)
+
+        // Itinerary generator (calls backend)
         const apiBase = (location.hostname === 'localhost' || location.hostname === '127.0.0.1') ? 'http://127.0.0.1:8000' : '';
 
         // Toggle custom destination input
         const destSel = document.getElementById('destSel');
         const destCustom = document.getElementById('destCustom');
-        destSel.addEventListener('change', () => {
-            if (destSel.value === 'Custom Destination') {
-                destCustom.classList.remove('hidden');
-            } else {
-                destCustom.classList.add('hidden');
-            }
-        });
-        document.getElementById('generateBtn').addEventListener('click', async () => {
-            const btn = document.getElementById('generateBtn');
-            const resultBox = document.getElementById('itineraryResult');
-            const errorBox = document.getElementById('errorBox');
-            errorBox.classList.add('hidden');
-            resultBox.textContent = '';
-            btn.disabled = true; btn.textContent = 'Generating...';
-            try {
-                const selectedDestination = destSel.value === 'Custom Destination'
-                    ? (destCustom.value || 'Explore Jharkhand (General)')
-                    : destSel.value;
-                const payload = {
-                    preferences: {
-                        destination: selectedDestination,
-                        month: document.getElementById('month').value,
-                        duration: parseInt(document.getElementById('duration').value || '7'),
-                        num_people: document.getElementById('people').value,
-                        tourism_type: document.getElementById('tourism').value,
-                        tribal_interest: document.getElementById('tribal').value,
-                        mobility_level: document.getElementById('mobility').value,
-                        accommodation_type: document.getElementById('accommodation').value,
-                        language_preference: document.getElementById('language').value,
-                        budget_range: document.getElementById('budget').value,
-                        special_interests: (document.getElementById('interests').value || '').split(',').map(s=>s.trim()).filter(Boolean),
-                        comments: document.getElementById('comments').value || ''
+        if (destSel && destCustom) {
+            destSel.addEventListener('change', () => {
+                if (destSel.value === 'Custom Destination') {
+                    destCustom.classList.remove('hidden');
+                } else {
+                    destCustom.classList.add('hidden');
+                }
+            });
+        }
+
+        const generateBtn = document.getElementById('generateBtn');
+        if (generateBtn) {
+            generateBtn.addEventListener('click', async () => {
+                const btn = generateBtn;
+                const resultBox = document.getElementById('itineraryResult');
+                const errorBox = document.getElementById('errorBox');
+                if (errorBox) errorBox.classList.add('hidden');
+                if (resultBox) resultBox.textContent = '';
+                btn.disabled = true; btn.textContent = 'Generating...';
+                try {
+                    const selectedDestination = destSel && destSel.value === 'Custom Destination'
+                        ? ((destCustom && destCustom.value) || 'Explore Jharkhand (General)')
+                        : (destSel ? destSel.value : 'Explore Jharkhand (General)');
+                    const payload = {
+                        preferences: {
+                            destination: selectedDestination,
+                            month: document.getElementById('month').value,
+                            duration: parseInt(document.getElementById('duration').value || '7'),
+                            num_people: document.getElementById('people').value,
+                            tourism_type: document.getElementById('tourism').value,
+                            tribal_interest: document.getElementById('tribal').value,
+                            mobility_level: document.getElementById('mobility').value,
+                            accommodation_type: document.getElementById('accommodation').value,
+                            language_preference: document.getElementById('language').value,
+                            budget_range: document.getElementById('budget').value,
+                            special_interests: (document.getElementById('interests').value || '').split(',').map(s=>s.trim()).filter(Boolean),
+                            comments: document.getElementById('comments').value || ''
+                        }
+                    };
+                    const res = await fetch(`${apiBase}/api/generate_itinerary`, {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(payload)
+                    });
+                    if (!res.ok) throw new Error(`API ${res.status}`);
+                    const data = await res.json();
+                    if (resultBox) resultBox.textContent = data.itinerary || 'No itinerary returned.';
+                } catch (err) {
+                    if (errorBox) {
+                        errorBox.textContent = `Failed to generate itinerary: ${err.message || err}`;
+                        errorBox.classList.remove('hidden');
                     }
-                };
-                const res = await fetch(`${apiBase}/api/generate_itinerary`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(payload)
-                });
-                if (!res.ok) throw new Error(`API ${res.status}`);
-                const data = await res.json();
-                resultBox.textContent = data.itinerary || 'No itinerary returned.';
-            } catch (err) {
-                errorBox.textContent = `Failed to generate itinerary: ${err.message || err}`;
-                errorBox.classList.remove('hidden');
-            } finally {
-                btn.disabled = false; btn.textContent = 'Generate Itinerary';
-            }
-        });
-
-
-        function generatePlan() {
-            const days = document.getElementById('days').value;
-            const pool = ['Betla National Park', 'Baidyanath Temple', 'Netarhat', 'Jonha Falls', 'Parasnath Hill'];
-            const list = document.getElementById('plan');
-            list.innerHTML = '';
-            for (let i = 0; i < days; i++) {
-                let li = document.createElement('li');
-                li.className = "p-2 bg-white rounded shadow";
-                li.innerText = `Day ${i + 1}: ${pool[i % pool.length]}`;
-                list.appendChild(li);
-            }
+                } finally {
+                    btn.disabled = false; btn.textContent = 'Generate Itinerary';
+                }
+            });
         }
 
         function saveUser() {
