--- a/SIH Frontend/index.html
+++ b/SIH Frontend/index.html
@@ -682,6 +682,26 @@
         © 2025 Jharkhand Tourism Portal
     </footer>
 
+    <!-- Floating Chat Widget -->
+    <div id="chat-widget">
+        <button id="chat-toggle" class="fixed bottom-6 right-6 z-50 bg-emerald-600 hover:bg-emerald-700 text-white rounded-full w-14 h-14 shadow-lg flex items-center justify-center" aria-label="Open chat">
+            <!-- Chat icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M8 10h.01M12 10h.01M16 10h.01M21 12c0 4.418-4.03 8-9 8-1.1 0-2.15-.16-3.12-.45-.32-.1-.48-.15-.63-.17a2 2 0 0 0-.91.09l-2.33.78a1 1 0 0 1-1.27-1.27l.78-2.33c.11-.34.16-.51.17-.63a3 3 0 0 0-.17-.75C3.2 14.84 3 13.94 3 13c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
+            </svg>
+        </button>
+
+        <div id="chat-box" class="hidden fixed bottom-24 right-6 z-50 w-80 bg-white rounded-lg shadow-2xl border border-gray-200 overflow-hidden">
+            <div class="bg-emerald-600 text-white px-4 py-2 flex items-center justify-between">
+                <span class="font-semibold text-sm">AI Assistant</span>
+                <button id="chat-close" class="text-white/80 hover:text-white" aria-label="Close chat">×</button>
+            </div>
+            <div class="p-3 text-sm text-gray-600">
+                Hi! How can I help you explore Jharkhand today?
+            </div>
+        </div>
+    </div>
+
     <script>
         function openTab(tabId, btn) {
             document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
@@ -835,6 +855,21 @@
             if (event.target == receiptModal) {
                 closeReceipt();
             }
+        }
+
+        // Chat widget toggle
+        const chatToggle = document.getElementById('chat-toggle');
+        const chatBox = document.getElementById('chat-box');
+        const chatClose = document.getElementById('chat-close');
+        if (chatToggle && chatBox) {
+            chatToggle.addEventListener('click', () => {
+                chatBox.classList.toggle('hidden');
+            });
+        }
+        if (chatClose && chatBox) {
+            chatClose.addEventListener('click', () => {
+                chatBox.classList.add('hidden');
+            });
         }
     </script>
 </body>
