Fixed carousel size

--- a/SIH Frontend/index.html
+++ b/SIH Frontend/index.html
@@ -36,7 +36,10 @@ transition: background-color 0.2s;
 }
 .tab-btn:hover { background-color: #34d399; }
 .tab-btn.active { background-color: #059669; color: white; }
-#carousel { display: flex; transition: transform 0.7s ease; }
+#carousel { 
+    height: 900px;
+    display: flex; 
+    transition: transform 0.7s ease; }
 /* Modal specific styles */
 .modal {
 display: none; /* Hidden by default */
